--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,11 +33,47 @@ section:nth-child(2)>h2:nth-child(5){
 /* fin exo padding */
 
 /* exo display */
-
+section:nth-child(3)>:nth-child(3),:nth-child(4){
+  margin: auto;
+  padding: auto;
+}
+section:nth-child(3)>:nth-child(3){
+  display: inline-block;
+}
+section:nth-child(3)>:nth-child(4){
+  display: inline-block;
+}
+section:nth-child(3)>:nth-child(4){
+  display:none;
+}
+  
 /* fin exo display */
 
 /* exo position */
+section:nth-child(5)>:nth-child(3){
+  position: fixed;
+  background-color: green;
+  margin: 0%;
+  top:50px;
+  left:50%;
+}
+
 /* fin exo position */
 
 /* exo position (priorité) */
+section:nth-child(6)>:nth-child(4){
+  background-color: blue;
+  margin-left: 100px;
+}
+section:nth-child(6)>:nth-child(3),:nth-child(4){
+  position: absolute;
+}
+section:nth-child(6)>:nth-child(3){
+  z-index: 1;
+}
+section:nth-child(6){
+  background-color: blueviolet;
+  position: relative;
+  z-index: 2;
+}
 /* fin exo position (priorité) */
