--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,38 +9,35 @@ section{
 h2{
   background-color: yellow ;
   border: solid black 2px;
-  height: 300px;
+  width: 300px;
 }
-section:nth-child(1)>h2:nth-child(3){
+section:first-child>:nth-child(3){
   margin: 50px;
 }
-section:nth-child(1)>h2:nth-child(5){
+section:first-child>:nth-child(5){
   margin-left: 20%;
 }
-section>h2:nth-child(7){
+section:first-child>:last-child{
   margin: auto;
 }
 
 /* fin exo margin */
 
 /* exo padding */
-section:nth-child(2)>h2:nth-child(3){
+section:nth-child(2)>h2:first-of-type{
   padding:50px ;
 }
-section:nth-child(2)>h2:nth-child(5){
+section:nth-child(2)>h2:last-of-type{
   padding-left: 20%;
 }
 /* fin exo padding */
 
 /* exo display */
-section:nth-child(3)>:nth-child(3),:nth-child(4){
-  margin: auto;
-  padding: auto;
+section:nth-child(3){
+  margin: 50px;
+  padding: 50px;
 }
-section:nth-child(3)>:nth-child(3){
-  display: inline-block;
-}
-section:nth-child(3)>:nth-child(4){
+section:nth-child(3)>h2{
   display: inline-block;
 }
 section:nth-child(3)>:nth-child(4){
@@ -48,6 +45,15 @@ section:nth-child(3)>:nth-child(4){
 }
   
 /* fin exo display */
+/*début exo float*/
+section:nth-child(4)>h2{
+  width: auto;
+  float: left;
+}
+section:nth-child(4){
+  overflow: auto;
+}
+/*fin exo float */
 
 /* exo position */
 section:nth-child(5)>:nth-child(3){
@@ -56,6 +62,9 @@ section:nth-child(5)>:nth-child(3){
   margin: 0%;
   top:50px;
   left:50%;
+}
+section:nth-child(5){
+  position: relative;
 }
 
 /* fin exo position */
